Add File System Implementation and Update Makefiles
- Introduced a comprehensive file system structure with classes for Bitmap, Directory, FileHandler, and FileSystem to manage file operations.
- Implemented an Interface class for user interaction with the file system.
- Added necessary header and source files for the new functionalities.
- Created Makefiles for both common and file system components, ensuring proper compilation and linking.
- Included example files for testing the file system functionality.
- Removed obsolete server client files and updated the server Makefile to include the new structure.

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,37 +1,6 @@
-# Compiler and flags
-CXX      := g++
-CXXFLAGS := -g -std=c++11 -Wall -Wextra -I. -Isockets
-LDFLAGS  := -lpthread
-LDFLAGS := -lssl -lcrypto
+# Include common Makefile first
+include ../common/Makefile
 
-# Source files (with paths)
-SERVER_SRCS := tests/testServer.cc sockets/VSocket.cc sockets/Socket.cc sockets/SSLSocket.cc Server.cc
-CLIENT_SRCS := tests/testClient.cc sockets/VSocket.cc sockets/Socket.cc sockets/SSLSocket.cc Client.cc
+# Add OpenSSL libraries after including common Makefile
+LIBS += -lssl -lcrypto
 
-# Object files (keep directory prefix for .o files)
-SERVER_OBJS := $(SERVER_SRCS:.cc=.o)
-CLIENT_OBJS := $(CLIENT_SRCS:.cc=.o)
-
-# Targets
-TARGETS := testClient.out testServer.out
-
-# Default target
-all: $(TARGETS)
-
-# Rule to compile any .cc -> .o (handles subdirectories)
-%.o: %.cc
-	@echo "Compiling $< -> $@"
-	$(CXX) $(CXXFLAGS) -c $< -o $@
-
-# Link executables
-testServer.out: $(SERVER_OBJS)
-	$(CXX) $^ $(LDFLAGS) -o $@
-
-testClient.out: $(CLIENT_OBJS)
-	$(CXX) $^ $(LDFLAGS) -o $@
-
-# Clean
-clean:
-	rm -f *.o *.out sockets/*.o tests/*.o
-
-.PHONY: all clean
